New version: marketing release

--- a/article/index.html
+++ b/article/index.html
@@ -81,7 +81,7 @@
 	
 	<div class="footer_supported_by_wrapper">
 		<div class="content_container">
-			<div class="footer_supported_by_image"></div>
+			<a href="http://hivdigital.ee/" class="footer_supported_by_image"></a>
 			<div class="footer_supported_by"></div>
 		</div>
 	</div>
